# arbor

./: .gitignore  Arbor-Architecture.md  CHANGELOG.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  pyproject.toml
arbor/: __init__.py
arbor/core/: __init__.py  rag_pipeline.py  tree_generator.py  tree_searcher.py  types.py
arbor/extraction/: markdown_extractor.py  pdf_extractor.py  text_utils.py
arbor/processing/: json_utils.py  node_subdivision.py  toc_detector.py  toc_processor.py  tree_builder.py  verification.py
arbor/prompts/: summarization.py  tree_generation.py  tree_search.py  verification.py
arbor/providers/: __init__.py  anthropic_provider.py  base.py  finetuned_provider.py  ollama_provider.py  openai_provider.py
arbor/utils/: async_helpers.py  token_counter.py  tree_utils.py
data/: batch_log.txt  batch_progress.json  metadata.json
data/errors/: 2603.07853v1.json  2603.08429v1.json  2603.08807v1.json  2603.09957v1.json  2603.10477v1.json  2603.10492v1.json  2603.10613v1.json  2603.10640v1.json  2603.10695v1.json  2603.10701v1.json  2603.10705v1.json  2603.10722v1.json  2603.10771v1.json  2603.10802v1.json  2603.10845v1.json  2603.10856v1.json  2603.10861v1.json  2603.10881v1.json  2603.10938v1.json  2603.10950v1.json  2603.10971v1.json  2603.10978v1.json  2603.10995v1.json  2603.11021v1.json  2603.11042v1.json  2603.11048v1.json
data/training/: 2603.08012v1.json  2603.08077v1.json  2603.08117v2.json  2603.08329v1.json  2603.08341v1.json  (+110 more)
examples/: quickstart.py
models/: Modelfile.treegen  Modelfile.treesearch  README.md
scripts/: benchmark.py  collect_pdfs.py  finetune_treegen.py  finetune_treesearch.py  format_training_data.py  generate_training_pair.py  run_batch.py  upload_to_hf.py
tests/: test_e2e_attention.py  test_step1_types_and_providers.py  test_step2_extraction.py  test_step3_prompts.py  test_step4_to_9.py
