[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbor-rag"
version = "0.1.0"
description = "Open-source vectorless RAG engine. Tree-structured document indexing with LLM-powered reasoning retrieval."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["rag", "llm", "document", "tree", "vectorless", "retrieval", "pdf", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "PyPDF2>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
pymupdf = ["pymupdf>=1.20.0"]
anthropic = ["anthropic>=0.20.0"]
all = [
    "tiktoken>=0.5.0",
    "pymupdf>=1.20.0",
    "anthropic>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "tiktoken>=0.5.0",
    "pymupdf>=1.20.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/Dhruv12310/arbor"
Documentation = "https://github.com/Dhruv12310/arbor#readme"
Repository = "https://github.com/Dhruv12310/arbor"
"Bug Tracker" = "https://github.com/Dhruv12310/arbor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arbor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
